[gd_scene load_steps=6 format=3 uid="uid://km7piloexuf7"]

[ext_resource type="Texture2D" uid="uid://c037y062dn5h2" path="res://asset/minion_test.png" id="1_puatt"]
[ext_resource type="Script" path="res://scripts/core/minion.gd" id="2_08ak8"]
[ext_resource type="Texture2D" uid="uid://crfotyi4hdkcf" path="res://asset/healthbar_under.png" id="3_4byj3"]
[ext_resource type="Texture2D" uid="uid://cctv0d5r10iqp" path="res://asset/healthbar_progress.png" id="4_4sixi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jiu2d"]
size = Vector2(12, 11.5)

[node name="Minion1" type="Sprite2D"]
texture = ExtResource("1_puatt")
script = ExtResource("2_08ak8")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = -8.0
max_value = 10.0
value = 8.0
texture_under = ExtResource("3_4byj3")
texture_progress = ExtResource("4_4sixi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jiu2d")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
